# TagRefSorter

./: Pipfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/tagrefsorter/: __init__.py  _version.py  cli.py  parser.py
src/tagrefsorter.egg-info/: PKG-INFO  requires.txt
tests/: README.md  conftest.py  constants.py
tests/unit/: conftest.py
tests/unit/_ensure_sentinel_line_breaker_inplace/: conftest.py  eslbi_fixtures.ipynb  test_eslbi.py
tests/unit/_find_replacements_in_aligner/: conftest.py  fria_fixtures.ipynb  test_fria.py
tests/unit/_find_rewrite/: conftest.py  test_fr.py
tests/unit/_find_rewrite_in_single_line/: conftest.py  frisl_fixtures.ipynb  test_frisl.py
tests/unit/_find_rewrites_in_aligner/: conftest.py
tests/unit/_search_math_block/: conftest.py  smb_fixtures.ipynb  test_smb.py
tests/unit/_search_math_inline/: conftest.py  smi_fixtures.ipynb  test_smi.py
typings/pylatexenc/latexwalker/: __init__.pyi
typings/pylatexenc/macrospec/: __init__.pyi  _argparsers.pyi
