[build-system]
requires = [
  "setuptools>=65", 
  "wheel", 
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "tagrefsorter"
# version = "0.1.4"
dynamic = ["version"]
description = "CLI tool to normalize LaTeX \\tag numbering in Jupyter Notebook files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "SuzuSys", email = "sigmatics@outlook.jp" }
]

dependencies = [
  'importlib_metadata; python_version < "3.8"',
  "nbformat>=5.0"
]

[project.scripts]
tagrefsorter = "tagrefsorter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/tagrefsorter/_version.py"
